# python-vatspy-data

./: README.md  pyproject.toml
vatspy_data/: __init__.py  types.py
