[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "vatspy-data"
version = "1.0.1"
authors = [{name = "Pavel Vorobyev", email = "aquavitale@yandex.ru"}]
description = "python representation of vatspy static data"
requires-python = ">=3.11"
dependencies = [
    "pydantic",
    "requests",
    "shapely",
]
keywords = [
    "vatspy",
    "vatsim",
]
license = {text = "MIT"}
readme = "README.md"

[project.urls]
Source = "https://github.com/viert/python-vatspy-data"
